--- a/packages/Dockerfile
+++ b/packages/Dockerfile
@@ -4,7 +4,7 @@ FROM node:18
 WORKDIR /usr/src/app
 
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
-COPY package*.json ./
+COPY package*.json tsconfig*.json ./
 
 # Install app dependencies
 RUN npm install
