remove redundant files, add start config

--- a/packages/package.json
+++ b/packages/package.json
@@ -9,8 +9,9 @@
     "gen:proto:hero": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/hero ./proto/hero.proto",
     "gen:proto:ecb": "mkdir -p ./src/ecb-provider/proto && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/ecb-provider/proto --proto_path=./proto ./proto/ecb-provider.proto",
     "gen:proto:currency": "mkdir -p ./src/currency-converter/proto && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/currency-converter/proto --proto_path=./proto ./proto/currency-converter.proto ./proto/ecb-provider.proto",
+    "gen:proto": "npm run gen:proto:hero && npm run gen:proto:ecb && npm run gen:proto:currency",
     "client:proto:hero": "node proto/grpc-client-heroes.js",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && npm run gen:proto",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
