--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "workspaces": [
     "packages"
   ],
+  "scripts": {
+    "build": "turbo run build",
+    "start": "turbo run start:prod"
+  },
   "devDependencies": {
     "turbo": "^1.6.2"
   }
