--- a/turbo.json
+++ b/turbo.json
@@ -5,8 +5,8 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
-    "lint": {
-      "outputs": []
+    "start:prod": {
+      "cache": false
     }
   }
 }
