--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "micro-services-nestjs-infrastructure-pulumi-gcp",
   "private": true,
   "workspaces": [
-    "packages"
+    "packages/**"
   ],
   "scripts": {
     "build": "turbo run build",
